{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 155,
  "lineage": "a517e7fe-5203-977f-25f6-4bb481175bf6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "classwork_iac_sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:637423624556:instance/i-0dfdd5620e3af7e39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfdd5620e3af7e39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07327a3a4d0fd9f85",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02494b19e603ffe9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010cee2bf60091943",
            "tags": {
              "Name": "classwork_iac_sg_main_instance"
            },
            "tags_all": {
              "Name": "classwork_iac_sg_main_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7a0739a7592edbf"
            ]
          },
          "dependencies": [
            "aws_security_group.classwork_iac_sg_main",
            "aws_subnet.classwork_iac_main_subnet",
            "aws_vpc.classwork_iac_vpc_main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "classwork_iac_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:internet-gateway/igw-0b275fb365e31caf6",
            "id": "igw-0b275fb365e31caf6",
            "owner_id": "637423624556",
            "tags": {
              "Name": "classwork_iac_main_gw"
            },
            "tags_all": {
              "Name": "classwork_iac_main_gw"
            },
            "vpc_id": "vpc-000479e80414dc5d7"
          },
          "dependencies": [
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "classwork_iac_main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:route-table/rtb-0ad44f25556596f98",
            "id": "rtb-0ad44f25556596f98",
            "owner_id": "637423624556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b275fb365e31caf6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "classwork_iac_main_rt"
            },
            "tags_all": {
              "Name": "classwork_iac_main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000479e80414dc5d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.classwork_iac_gw",
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "classwork_iac_main_rt_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f35e673e3108d19a",
            "route_table_id": "rtb-0ad44f25556596f98",
            "subnet_id": "subnet-010cee2bf60091943"
          },
          "dependencies": [
            "aws_internet_gateway.classwork_iac_gw",
            "aws_route_table.classwork_iac_main_rt",
            "aws_subnet.classwork_iac_main_subnet",
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "classwork_iac_sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group/sg-0a7a0739a7592edbf",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7a0739a7592edbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "classwork_iac_sg_main",
            "name_prefix": "",
            "owner_id": "637423624556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "classwork_iac_sg_main"
            },
            "tags_all": {
              "Name": "classwork_iac_sg_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-000479e80414dc5d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "classwork_iac_main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:subnet/subnet-010cee2bf60091943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010cee2bf60091943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423624556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "classwork_iac_main_subnet"
            },
            "tags_all": {
              "Name": "classwork_iac_main_subnet"
            },
            "vpc_id": "vpc-000479e80414dc5d7"
          },
          "dependencies": [
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "classwork_iac_vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:vpc/vpc-000479e80414dc5d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04dc91eab9f5a604c",
            "default_route_table_id": "rtb-0f5b3dd82684b89b9",
            "default_security_group_id": "sg-0dc2bfa8800cb74a4",
            "dhcp_options_id": "dopt-0c7b149614e466d2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000479e80414dc5d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5b3dd82684b89b9",
            "owner_id": "637423624556",
            "tags": {
              "Name": "classwork_iac_main"
            },
            "tags_all": {
              "Name": "classwork_iac_main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "classwork_iac_sg_main_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-03e6d92de856b9dc2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03e6d92de856b9dc2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a7a0739a7592edbf",
            "security_group_rule_id": "sgr-03e6d92de856b9dc2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.classwork_iac_sg_main",
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "classwork_iac_sg_main_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-0978f07bc56ffbd27",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0978f07bc56ffbd27",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a7a0739a7592edbf",
            "security_group_rule_id": "sgr-0978f07bc56ffbd27",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.classwork_iac_sg_main",
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "classwork_iac_sg_main_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423624556:security-group-rule/sgr-066d5b13a6638c6ee",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-066d5b13a6638c6ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a7a0739a7592edbf",
            "security_group_rule_id": "sgr-066d5b13a6638c6ee",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.classwork_iac_sg_main",
            "aws_vpc.classwork_iac_vpc_main"
          ]
        }
      ]
    }
  ]
}